--- a/.github/workflows/ErfanGSI-build.yml
+++ b/.github/workflows/ErfanGSI-build.yml
@@ -6,7 +6,7 @@ on:
       ROM_URL:
         description: 'Direct link/直链'
         required: true
-        default: 'https://mirrorbits.lineageos.org/full/sagit/20230302/lineage-20.0-20230302-nightly-sagit-signed.zip'
+        default: 'https://master.dl.sourceforge.net/project/cipheros/Cipher-3.x/STRIKE/tiare/CipherOS-3.6-STRIKE-cipher_tiare-20220615-1610-OFFICIAL-VANILLA.zip'
       REPACK_NAME:
         description: 'Compressed name/打包名称'
         required: true
@@ -15,9 +15,6 @@ on:
         description: 'ROM type/ROM 类型'
         required: true
         default: 'Generic'
-env:
-  TELEGRAM_TO: 1214932938
-  TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
 
 jobs:
   build_tosasitill_GSI:
@@ -86,15 +83,6 @@ jobs:
           mkdir upload_ab
           ls upload_ab
           if [ $(ls -l tosasitillGSI0202_${{ github.event.inputs.REPACK_NAME }} | awk '{print $5}') -gt 2147483647 ]; then tar cvzpf - tosasitillGSI0202_${{ github.event.inputs.REPACK_NAME }} | split -d -b 1024m - upload_ab/tosasitillGSI0202_${{ github.event.inputs.REPACK_NAME }}; else mv tosasitillGSI0202_${{ github.event.inputs.REPACK_NAME }} upload_ab/tosasitillGSI0202_${{ github.event.inputs.REPACK_NAME }}; fi
-
-      - name: 发送 Telegram 提醒消息 2/2
-        uses: appleboy/telegram-action@master
-        with:
-            to: 1214932938
-            token: ${{ secrets.TELEGRAM_TOKEN }}
-            message: tosasitill GSI 构建成功!
-              构建 GSI 详细信息如下！
-            document: ${{ github.workspace }}/ErfanGSIs/build_info.txt
 
       - name: 上传至 Github Releases
         if: ${{ github.event.inputs.ALI }} != '1'
