--- a/.github/workflows/ErfanGSI-build.yml
+++ b/.github/workflows/ErfanGSI-build.yml
@@ -54,6 +54,10 @@ jobs:
         run: |
           sudo sed -i 's/USE_MIRROR_FOR_PIP\=true/USE_MIRROR_FOR_PIP\=false/' $GITHUB_WORKSPACE/ErfanGSIs/setup.sh
           sudo bash $GITHUB_WORKSPACE/ErfanGSIs/setup.sh
+          wget -qO - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public | sudo apt-key add -
+          sudo add-apt-repository --yes https://adoptopenjdk.jfrog.io/adoptopenjdk/deb
+          sudo apt update
+          sudo apt install adoptopenjdk-11-hotspot
           sudo apt-get -y --purge remove "adoptopenjdk-11-hotspot"
           java -version
           pip3 install aligo
