--- a/.github/workflows/ErfanGSI-build.yml
+++ b/.github/workflows/ErfanGSI-build.yml
@@ -57,7 +57,7 @@ jobs:
           wget -qO - https://adoptopenjdk.jfrog.io/adoptopenjdk/api/gpg/key/public | sudo apt-key add -
           sudo add-apt-repository --yes https://adoptopenjdk.jfrog.io/adoptopenjdk/deb
           sudo apt update
-          sudo apt install adoptopenjdk-11-hotspot
+          sudo apt install adoptopenjdk-11-hotspot python3-pip
           sudo apt-get -y --purge remove "adoptopenjdk-11-hotspot"
           java -version
           pip3 install aligo
